--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,14 @@
 ---
-title: Le Wagon - Middleman
+title: Design & Front-End
 ---
 
 <div id="home">
   <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
+	<h1>Graphic Design<br> & <span
+	   class="txt-rotate"
+	   data-period="2000"
+	   data-rotate='[ "Front-End", "Web Development", "UI/UX" ]'></span>
+
     <p class="about">
       <%= link_to "More about this template", "about.html" %>
     </p>
