--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,11 +1,7 @@
 #home {
-  background-color: #D23333;
-  color: white;
+  color: black;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  text-align: center;
+
   p {
     margin-top: 1.5em;
   }
@@ -14,4 +10,9 @@
     font-weight: bold;
     font-size: 16px;
   }
+}
+h1 {
+  font-family: "SIM", sans-serif;
+  font-size: 7vw;
+  margin-left: 2vw;
 }
