--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,13 +4,19 @@ title: Design & Front-End
 
 <div id="home">
   <div class="home-content">
-	<h1>Graphic Design<br> & <span
+	<h1>Art Direction<br> & <span
 	   class="txt-rotate"
 	   data-period="2000"
-	   data-rotate='[ "Front-End", "Web Development", "UI/UX" ]'></span>
+	   data-rotate='[ "Front-End Development", "UI/UX Design", "Webdesign" ]'></span>
 
     <p class="about">
-      <%= link_to "More about this template", "about.html" %>
+      <%= link_to "Github", "#" %>
+    </p>
+    <p class="about">
+      <%= link_to "Instagram", "#" %>
+    </p>
+    <p class="about">
+      <%= link_to "Linkedin", "#" %>
     </p>
   </div>
 </div>
