--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,15 +8,17 @@ title: Design & Front-End
 	   class="txt-rotate"
 	   data-period="2000"
 	   data-rotate='[ "Front-End Development", "UI/UX Design", "Webdesign" ]'></span>
-
-    <p class="about">
-      <%= link_to "Github", "#" %>
-    </p>
-    <p class="about">
-      <%= link_to "Instagram", "#" %>
-    </p>
-    <p class="about">
-      <%= link_to "Linkedin", "#" %>
-    </p>
+<div class="foot">
+	<p class="about">
+	  <%= link_to "Github", "#" %>
+	</p>
+	<p class="about">
+	  <%= link_to "Instagram", "#" %>
+	</p>
+	<p class="about">
+	  <%= link_to "Linkedin", "#" %>
+	</p>
+	
+</div>
   </div>
 </div>
