--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -1,3 +1,9 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
+
+.foot {
+	display: flex;
+	justify-content: space-between;
+	width: 30vw;
+}
