--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 
 // Define fonts for body and headers
-$body-font: "SIM", "Helvetica", "sans-serif";
-$headers-font: "SIM", "Helvetica", "sans-serif";
+$body-font: "AG-Regular", "Helvetica", "sans-serif";
+$headers-font: "AG-Regular", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
@@ -15,6 +15,6 @@ $headers-font: "SIM", "Helvetica", "sans-serif";
 // }
 // $my-font: "Font Name";
 @font-face {
-  font-family: "SIM";
-  src: url("SIM.woff");
+  font-family: "AG-Regular";
+  src: url("../AG-Regular.woff");
 }
