--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,4 +1,16 @@
-<div class="foot">
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fa fa-github"></i></a>
+    <a href="#"><i class="fa fa-instagram"></i></a>
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    2017 © Stanislas Wiart | All rights reserved | Typeface: Akzidenz Grotesk
+  </div>
+</div>
+<!-- <div class="foot">
 	<p class="about">
 	  <%= link_to "Github", "#" %>
 	</p>
@@ -8,4 +20,4 @@
 	<p class="about">
 	  <%= link_to "Linkedin", "#" %>
 	</p>
-</div>
+</div> -->
