--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 #home {
   color: black;
   height: 70vh;
+  width: 90vw;
 
   p {
     margin-top: 1.5em;
@@ -13,7 +14,7 @@
 }
 h1 {
   font-family: "AG-Regular", sans-serif;
-  font-size: 9vw;
+  font-size: 11vw;
   margin-left: 2vw;
 }
 @keyframes blink {  
