--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Design & Front-End
+title: Stanislas Wiart | Art Direction & Digital Design
 ---
 
 <div id="home">
@@ -7,6 +7,6 @@ title: Design & Front-End
 	<h1>Art Direction<br> & <span
 	   class="txt-rotate"
 	   data-period="2000"
-	   data-rotate='[ "Front-End Development", "UI/UX Design", "Web Design", "*/|}{[]~\\\":;?/.><=+-_)(*&^%$#@!)}" ]'></span>
+	   data-rotate='[ "Branding", "Front-end Development", "UI/UX Design", "Web Design", "*/|}{[~\":;?><=)(*&^%$#@!" ]'></span>
   </div>
 </div>
