--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -1,9 +1,4 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
-
-.foot {
-	display: flex;
-	justify-content: space-between;
-	width: 30vw;
-}
+@import "footer";
