--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -18,3 +18,7 @@ $headers-font: "AG-Regular", "Helvetica", "sans-serif";
   font-family: "AG-Regular";
   src: url("../AG-Regular.woff");
 }
+@font-face {
+  font-family: "Avara";
+  src: url("../Avara.otf");
+}
