--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -13,7 +13,7 @@
   }
 }
 h1 {
-  font-family: "AG-Regular", sans-serif;
+  font-family: "Avara", sans-serif;
   font-size: 11vw;
   margin-left: 2vw;
 }
