--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
     <a href="#"><i class="fa fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    2017 © Stanislas Wiart | All rights reserved | Typeface: Avara
+    2017 © Stanislas Wiart | All rights reserved | Typeface: Nuckle
   </div>
 </div>
 <!-- <div class="foot">
