--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <h2>
     <a href="/" class="navbar-wagon-brand">
-        stanislas wiart
+        Stanislas Wiart
     </a>
   </h2>
 
