--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 
 // Define fonts for body and headers
-$body-font: "AG-Regular", "Helvetica", "sans-serif";
-$headers-font: "AG-Regular", "Helvetica", "sans-serif";
+$body-font: "NB", "Helvetica", "sans-serif";
+$headers-font: "NB", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
@@ -21,4 +21,8 @@ $headers-font: "AG-Regular", "Helvetica", "sans-serif";
 @font-face {
   font-family: "Avara";
   src: url("../Avara.otf");
+}
+@font-face {
+  font-family: "NB";
+  src: url("../NB.woff");
 }
