--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,10 +1,9 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fa fa-github"></i></a>
-    <a href="#"><i class="fa fa-instagram"></i></a>
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#">Github</i></a>
+    <a href="#">Instagram</i></a>
+    <a href="#">Facebook</i></a>
+    <a href="#">Linkedin</i></a>
   </div>
   <div class="footer-copyright">
     2017 © Stanislas Wiart | All rights reserved | Typeface: Nuckle
