--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -21,14 +21,16 @@
 }
 .footer-links a {
   color: black;
-  opacity: 0.15;
+  opacity: 0.5;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 1em;
   padding: 0px 10px;
 }
 .footer-links a:hover {
   opacity: 1;
 }
-.footer .fa-heart {
-  color: #D23333;
+.footer-copyright {
+  color: black;
+  opacity: 0.5;
+  font-size: 1em;
 }
