--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -7,10 +7,8 @@
   align-items: center;
   justify-content: space-between;
 }
-
-/* Logo */
-.navbar-wagon-brand img {
-  height: 50px;
+.navbar-title a {
+  text-decoration: none !important;
 }
 
 /* User Avatar */
