--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,4 +9,16 @@ title: Stanislas Wiart | Art Direction & Digital Design
 	   data-period="2000"
 	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/|}{[~\":;?><=)(*&^%$#@!" ]'></span>
   </div>
-</div>
+<!--   <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+  			<img src="../images/display-2.png" alt="">
+      </div>
+      <div class="col-xs-12 col-sm-4">
+  			<img src="../images/display-3.png" alt="">
+      </div>
+      <div class="col-xs-12 col-sm-4">
+  			<img src="../images/display.png" alt="">
+      </div>
+    </div>
+  </div> -->
