--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,16 +9,17 @@ title: Stanislas Wiart | Art Direction & Digital Design
 	   data-period="2000"
 	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/|}{[~\":;?><=)(*&^%$#@!" ]'></span>
   </div>
-<!--   <div class="container">
+  <div class="container">
+  	<h2 class="works-title">Latest Works</h2>
     <div class="row">
-      <div class="col-xs-12 col-sm-4">
-  			<img src="../images/display-2.png" alt="">
-      </div>
-      <div class="col-xs-12 col-sm-4">
-  			<img src="../images/display-3.png" alt="">
-      </div>
-      <div class="col-xs-12 col-sm-4">
+      <div class="col-xs-12 col-md-4 col-sm-4 card">
   			<img src="../images/display.png" alt="">
       </div>
+      <div class="col-xs-12 col-md-4 col-sm-4 card">
+  			<img src="../images/display-2.png" alt="">
+      </div>
+      <div class="col-xs-12 col-md-4 col-sm-4 card">
+  			<img src="../images/display-3.png" alt="">
+      </div>
     </div>
-  </div> -->
+  </div>
