--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -14,7 +14,7 @@
 }
 h1 {
   font-family: "NB", sans-serif;
-  font-size: 6.5em;
+  font-size: 5.7em;
   line-height: 1em;
   margin-left: 2vw;
   width: 85%;
@@ -25,51 +25,17 @@ h1 {
 span .text-rotate {
   animation: blink 1s linear infinite;
 }
-.card {
-  height: 175px;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-  background-size: cover !important;
-  background-position: center;
-  color: white;
-  position: relative;
+.container {
+  width: 970px;
 }
-.card-user {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  width: 40px;
-  border-radius: 50%;
+.card img {
+  width: 35vh;
+  position: fixed;
+  bottom: 12%;
 }
-.card-category {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 15px;
-  text-transform: uppercase;
-}
-.card-description {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-}
-.card-description h2 {
-  font-size: 24px;
-}
-.card-description p {
-  font-size: 14px;
-  opacity: 0.7;
-  font-weight: lighter;
-}
-.card-link {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
+.works-title {
+  position: fixed;
+  bottom: 9%;
+  text-align: center;
   width: 100%;
-  z-index: 2;
-  background: black;
-  opacity: 0;
-}
-.card-link:hover {
-  opacity: 0.1;
 }
