img hover fonts try out

--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -26,3 +26,11 @@ $headers-font: "NB", "Helvetica", "sans-serif";
   font-family: "NB";
   src: url("../NB.woff");
 }
+@font-face {
+  font-family: "NBO";
+  src: url("../NBO.woff");
+}
+@font-face {
+  font-family: "NSB";
+  src: url("../NSB.woff");
+}
