--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -13,7 +13,7 @@
   }
 }
 h1 {
-  font-family: "NB", sans-serif;
+  font-family: "NSB", "NB";
   font-size: 5.7em;
   line-height: 1em;
   margin-left: 2vw;
@@ -26,16 +26,23 @@ span .text-rotate {
   animation: blink 1s linear infinite;
 }
 .container {
-  width: 970px;
+  width: 100vh;
 }
 .card img {
   width: 35vh;
   position: fixed;
   bottom: 12%;
+  filter: drop-shadow(0.15em 0.15em 0.25em rgba(0,0,0,0.25)); 
+  margin: 1%;
 }
 .works-title {
   position: fixed;
   bottom: 9%;
   text-align: center;
   width: 100%;
+}
+img:hover {
+  transition: all 0.3s ease;
+  transform: scale(1.1);
+  cursor: pointer;
 }
