--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -26,19 +26,22 @@ span .text-rotate {
   animation: blink 1s linear infinite;
 }
 .container {
-  width: 100vh;
+  height: 50px;
+  width: 100%;
+  margin: 0;
+  position: absolute;
 }
 .card img {
   width: 35vh;
   position: fixed;
   bottom: 12%;
   filter: drop-shadow(0.15em 0.15em 0.25em rgba(0,0,0,0.25)); 
-  margin: 1%;
 }
 .works-title {
   position: fixed;
-  bottom: 9%;
-  text-align: center;
+  bottom: 36%;
+  text-align: left;
+  padding-left: 50px;
   width: 100%;
 }
 img:hover {
