--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,13 +12,13 @@ title: Stanislas Wiart | Art Direction & Digital Design
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-4 col-sm-4 card">
-  			<img src="../images/display.png" alt="">
+  			<img src="../images/display.png" alt="" style="height: 20vh;">
       </div>
       <div class="col-xs-12 col-md-4 col-sm-4 card">
   			<img src="../images/display-2.png" alt="">
       </div>
       <div class="col-xs-12 col-md-4 col-sm-4 card">
-  			<img src="../images/display-3.png" alt="">
+  			<img src="../images/display-3.png" alt="" style="height: 20vh;">
       </div>
     </div>
   </div>
