--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -32,7 +32,7 @@ span .text-rotate {
   position: absolute;
 }
 .card img {
-  width: 35vh;
+  height: 35vh;
   position: fixed;
   bottom: 12%;
   filter: drop-shadow(0.15em 0.15em 0.25em rgba(0,0,0,0.25)); 
