--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,20 +7,20 @@ title: Stanislas Wiart | Art Direction & Digital Design
 	<h1>Art Direction<br> & <span
 	   class="txt-rotate"
 	   data-period="2000"
-	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/|}{[~\":;?><=)(*&^%$#@!" ]'></span>
+	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/|}{~?><=&%$#@!" ]'></span>
   </div>
   <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-4 col-sm-4 card">
+	  <h2 class="works-title">Latest Works</h2>
+    <div class="row flexbox">
+      <div class="card">
   			<img src="../images/display.png" alt="" style="height: 20vh;">
       </div>
-      <div class="col-xs-12 col-md-4 col-sm-4 card">
-  			<img src="../images/display-2.png" alt="">
+      <div class="card">
+  			<img src="../images/display-2.png" alt="" style="height: 30vh;">
       </div>
-      <div class="col-xs-12 col-md-4 col-sm-4 card">
+      <div class="card">
   			<img src="../images/display-3.png" alt="" style="height: 20vh;">
       </div>
     </div>
   </div>
-  <h2 class="works-title">Latest Works</h2>
 
