--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -12,7 +12,7 @@
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   bottom: 0;
-  position: absolute;
+  position: fixed;
   width: 100%;
 }
 .footer-links {
