--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -17,7 +17,7 @@ h1 {
   font-size: 5.7em;
   line-height: 1em;
   margin-left: 2vw;
-  width: 85%;
+  width: 100%;
 }
 @keyframes blink {  
   50% { opacity: 0; }
@@ -26,26 +26,28 @@ span .text-rotate {
   animation: blink 1s linear infinite;
 }
 .container {
-  height: 50px;
+  height: 50vh;
   width: 100%;
   margin: 0;
   position: absolute;
+  margin-top: 30px;
+  padding-left: 30px !important;
 }
 .card img {
-  height: 35vh;
-  position: fixed;
-  bottom: 12%;
   filter: drop-shadow(0.15em 0.15em 0.25em rgba(0,0,0,0.25)); 
 }
 .works-title {
-  position: fixed;
-  bottom: 36%;
+  position: absolute;
   text-align: left;
-  padding-left: 50px;
-  width: 100%;
+  width: 40%;
 }
 img:hover {
   transition: all 0.3s ease;
   transform: scale(1.1);
   cursor: pointer;
+}
+.flexbox {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
