--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: space-between;
   height: 65px;
-  padding: 0px 50px;
+  padding: 0px 20px 0px 30px;
   color: rgba(0,0,0,0.3);
   bottom: 0;
   position: fixed;
