--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,10 +16,10 @@ title: Stanislas Wiart | Art Direction & Digital Design
   			<img src="../images/display.png" alt="" style="height: 20vh;">
       </div>
       <div class="card">
-  			<img src="../images/display-2.png" alt="" style="height: 30vh;">
+      <img src="../images/display.png" alt="" style="height: 20vh;">
       </div>
       <div class="card">
-  			<img src="../images/display-3.png" alt="" style="height: 20vh;">
+      <img src="../images/display.png" alt="" style="height: 20vh;">
       </div>
     </div>
   </div>
