refacto contact added

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,5 +22,16 @@ title: Stanislas Wiart | Art Direction & Digital Design
       <img src="../images/display.png" alt="" style="height: 20vh;">
       </div>
     </div>
+      <div class="row flexbox">
+        <div class="card">
+          <img src="../images/display.png" alt="" style="height: 20vh;">
+        </div>
+        <div class="card">
+        <img src="../images/display.png" alt="" style="height: 20vh;">
+        </div>
+        <div class="card">
+        <img src="../images/display.png" alt="" style="height: 20vh;">
+        </div>
+      </div>
   </div>
 
