--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -1,7 +1,6 @@
-<div class="navbar-wagon">
-  <h2>
-    Stanislas Wiart
-  </h2>
+<div class="navbar-wagon navbar-title">
+  <h2>Stanislas Wiart</h2>
+  <a href="mailto:stanislas.wiart@gmail.com"><h2>contact</h2></a>
 </div>
 
   <!-- Dropdown appearing on mobile only -->
