--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -1,17 +1,4 @@
 <div class="navbar-wagon navbar-title">
   <h2>Stanislas Wiart</h2>
-  <a href="mailto:stanislas.wiart@gmail.com"><h2>contact</h2></a>
-</div>
-
-  <!-- Dropdown appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Host</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Messagese</a></li>
-      </ul>
-    </div>
-  </div>
+  <a href="mailto:stanislas.wiart@gmail.com"><h2>Contact</h2></a>
 </div>
