--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-wagon navbar-title">
+<div class="navbar-ok">
   <h2>Stanislas Wiart</h2>
-  <a href="mailto:stanislas.wiart@gmail.com"><h2>Contact</h2></a>
+  <h2><a href="mailto:stanislas.wiart@gmail.com">Contact</a></h2>
 </div>
