--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -1,24 +1,16 @@
-/* Main navbar */
-.navbar-wagon {
+.navbar-ok {
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-.navbar-title a {
-  text-decoration: none !important;
-}
-
-/* Navbar link */
-.navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
-}
-.navbar-wagon-link:hover {
-  color: #da552f;
-  text-decoration: none;
+  a {
+    text-decoration: none !important;
+  }
+  a:hover {
+    color: rgba(0,0,0,0.5);
+  }
 }
 h2 {
   font-size: 1.5vw;
