--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,24 +13,24 @@ title: Stanislas Wiart | Art Direction & Digital Design
 	  <h2 class="works-title">Latest Works</h2>
     <div class="row flexbox">
       <div class="card">
-  			<img src="../images/display.png" alt="" style="height: 20vh;">
+  			<img src="../images/display.png" alt="">
       </div>
       <div class="card">
-      <img src="../images/display.png" alt="" style="height: 20vh;">
+      <img src="../images/display.png" alt="">
       </div>
       <div class="card">
-      <img src="../images/display.png" alt="" style="height: 20vh;">
+      <img src="../images/display.png" alt="">
       </div>
     </div>
       <div class="row flexbox">
         <div class="card">
-          <img src="../images/display.png" alt="" style="height: 20vh;">
+          <img src="../images/display.png" alt="">
         </div>
         <div class="card">
-        <img src="../images/display.png" alt="" style="height: 20vh;">
+        <img src="../images/display.png" alt="">
         </div>
         <div class="card">
-        <img src="../images/display.png" alt="" style="height: 20vh;">
+        <img src="../images/display.png" alt="">
         </div>
       </div>
   </div>
