--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -19,10 +19,12 @@ h1 {
   width: 100%;
 }
 @keyframes blink {  
-  50% { opacity: 0; }
+  0%   { border-color: rgba(0, 0, 0, 1); }
+  50%  { border-color: rgba(0, 0, 0, 0); }
+  100% { border-color: rgba(0, 0, 0, 1); }
 }
 span .text-rotate > .wrap {
-  animation: blink 1s linear infinite;
+  animation: border-pulsate 2s infinite;
 }
 .container {
   height: 50vh;
