--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,7 +10,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
 	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/|}{~?><=&%$#@!" ]'></span>
   </div>
   <div class="container">
-	  <h2 class="works-title animated bounceInDown">Latest Works</h2>
+	  <h2 class="works-title animated slideInUp">Latest Works</h2>
     <div class="row flexbox">
       <div class="card">
   			<img src="../images/display.png" alt="">
