--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -4,7 +4,7 @@
   width: 30vw;
 }
 .footer {
-  background: #F4F4F4;
+  background: #FFF;
   display: flex;
   align-items: center;
   justify-content: space-between;
