--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#">Github</i></a>
-    <a href="#">Instagram</i></a>
-    <a href="#">Facebook</i></a>
-    <a href="#">Linkedin</i></a>
+    <a href="#" class="hvr-float-shadow">Github</i></a>
+    <a href="#" class="hvr-float-shadow">Instagram</i></a>
+    <a href="#" class="hvr-float-shadow">Facebook</i></a>
+    <a href="#" class="hvr-float-shadow">Linkedin</i></a>
   </div>
   <div class="footer-copyright">
     2017 © Stanislas Wiart | All rights reserved | Typeface: Nuckle
