--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
 <div class="navbar-ok">
-  <h2>Stanislas Wiart</h2>
-  <h2><a href="mailto:stanislas.wiart@gmail.com">Contact</a></h2>
+  <h2 class="">Stanislas Wiart</h2>
+  <h2><a href="mailto:stanislas.wiart@gmail.com" class="">Contact</a></h2>
 </div>
