style corrections added video

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,25 +4,26 @@ title: Stanislas Wiart | Art Direction & Digital Design
 
 <div id="home">
   <div class="home-content">
-	<h1>Art Direction<br> & <span
+	<h1>Art Direction & <br><span
 	   class="txt-rotate"
 	   data-period="2000"
-	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/|}{~?><=&%$#@!" ]'></span>
+	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/-+|}{~?><=&%$#@!" ]'></span>
   </div>
   <div class="container">
-	  <h2 class="works-title animated slideInUp">Latest Works</h2>
     <div class="row flexbox">
-      <div class="card">
-  			<img src="../images/display.png" alt="">
+    <iframe src="https://player.vimeo.com/video/238100674?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="800" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<!--       <div class="card">
+        <img src="../images/display.png" alt="">
       </div>
       <div class="card">
       <img src="../images/display.png" alt="">
       </div>
       <div class="card">
       <img src="../images/display.png" alt="">
-      </div>
+      </div> -->
     </div>
-      <div class="row flexbox">
+	  <a href="http://www.digdog.in" target="blank"><h2 class="works-title animated infinite flash">Digdog, an app that scrap Ebay and Discogs</h2></a>
+<!--       <div class="row flexbox">
         <div class="card">
           <img src="../images/display.png" alt="">
         </div>
@@ -32,6 +33,6 @@ title: Stanislas Wiart | Art Direction & Digital Design
         <div class="card">
         <img src="../images/display.png" alt="">
         </div>
-      </div>
+      </div> -->
   </div>
 
