--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
 	<h1>Art Direction & <br><span
 	   class="txt-rotate"
 	   data-period="2000"
-	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/-+|}{~?><=&%$#@!" ]'></span>
+	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/+|}{~?><=&%$#@!" ]'></span>
   </div>
   <div class="container">
     <div class="row flexbox">
