--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,7 +22,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
       <img src="../images/display.png" alt="">
       </div> -->
     </div>
-	  <a href="http://www.digdog.in" target="blank"><h2 class="works-title animated infinite flash">Digdog, an app that scrap Ebay and Discogs</h2></a>
+	  <a href="http://www.digdog.in" target="blank"><h2 class="works-title hvr-pulse-shrink">Digdog, an app that scrap Ebay and Discogs</h2></a>
 <!--       <div class="row flexbox">
         <div class="card">
           <img src="../images/display.png" alt="">
