--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -9,10 +9,12 @@
   align-items: center;
   justify-content: space-between;
   height: 65px;
-  padding: 0px 20px 0px 30px;
+  padding: 0px 30px 0px 30px;
   color: rgba(0,0,0,0.3);
+  position: absolute;
+  right: 0;
   bottom: 0;
-  position: fixed;
+  left: 0;
   width: 100%;
 }
 .footer-links {
