--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#" class="hvr-float-shadow">Github</i></a>
-    <a href="#" class="hvr-float-shadow">Instagram</i></a>
-    <a href="#" class="hvr-float-shadow">Facebook</i></a>
-    <a href="#" class="hvr-float-shadow">Linkedin</i></a>
+    <a href="https://github.com/Stan83W" target="blank" class="hvr-float-shadow">Github</a>
+    <a href="#" class="hvr-float-shadow">Instagram</a>
+    <a href="https://www.are.na/stan-wiart" target="blank" class="hvr-float-shadow">Arena</a>
+    <a href="https://www.linkedin.com/in/stanislas-wiart/" target="blank" class="hvr-float-shadow">Linkedin</a>
   </div>
   <div class="footer-copyright">
     2017 © Stanislas Wiart | All rights reserved | Typeface: Nuckle | Made with ERB
