--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,17 +12,9 @@ title: Stanislas Wiart | Art Direction & Digital Design
   <div class="container">
     <div class="row flexbox">
     <iframe src="https://player.vimeo.com/video/238100674?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="800" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<!--       <div class="card">
-        <img src="../images/display.png" alt="">
-      </div>
-      <div class="card">
-      <img src="../images/display.png" alt="">
-      </div>
-      <div class="card">
-      <img src="../images/display.png" alt="">
-      </div> -->
+<!--     <iframe width="560" height="315" src="https://www.youtube.com/embed/Kw2atCgWivI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe> -->
     </div>
-	  <a href="http://www.digdog.in" target="blank"><h2 class="works-title hvr-pulse-shrink">Digdog, an app that scrap Ebay and Discogs</h2></a>
+	  <a href="http://www.digdog.in" target="blank"><h2 class="works-title hvr-pulse-shrink" id="subtitle">Digdog, an app that scrap Ebay and Discogs<br>Visit website</h2></a>
 <!--       <div class="row flexbox">
         <div class="card">
           <img src="../images/display.png" alt="">
