--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@ html {
 
 #home {
   color: black;
-  height: 100%;
+  height: 85vw;
   margin: auto;
   p {
     margin-top: 1.5em;
@@ -45,8 +45,9 @@ span .text-rotate > .wrap {
 .works-title {
   position: absolute;
   text-align: center;
-  width: 100%;
-  margin: 0;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
   margin-top: 30px;
 }
 img {
@@ -62,4 +63,7 @@ img:hover {
   justify-content: space-between;
   align-items: center;
   margin: 30px 0 0 0;
+}
+#subtitle {
+  line-height: 2em;
 }
