--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,10 +11,10 @@ title: Stanislas Wiart | Art Direction & Digital Design
   </div>
   <div class="container">
     <div class="row flexbox">
-    <iframe src="https://player.vimeo.com/video/238100674?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="800" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/242470540?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="700" height="494" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <!--     <iframe width="560" height="315" src="https://www.youtube.com/embed/Kw2atCgWivI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe> -->
     </div>
-	  <a href="http://www.digdog.in" target="blank"><h2 class="works-title hvr-pulse-shrink" id="subtitle">Digdog, an app that scrap Ebay and Discogs<br>Visit website</h2></a>
+	  <h2 class="works-title" id="subtitle">Digdog scraps Ebay and Discogs<br></a><span class="hvr-pulse-shrink">Visit website</span></a></h2>
 <!--       <div class="row flexbox">
         <div class="card">
           <img src="../images/display.png" alt="">
