--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -6,6 +6,6 @@
     <a href="https://www.linkedin.com/in/stanislas-wiart/" target="blank" class="hvr-float-shadow">Linkedin</a>
   </div>
   <div class="footer-copyright">
-    2017 © Stanislas Wiart | All rights reserved | Typeface: Nuckle | Made with ERB
+    2017 © Stanislas Wiart | All rights reserved | Made with ERB
   </div>
 </div>
