--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,18 +12,17 @@ title: Stanislas Wiart | Art Direction & Digital Design
   <div class="container">
     <div class="row flexbox">
     <iframe src="https://player.vimeo.com/video/242470540?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="700" height="494" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<!--     <iframe width="560" height="315" src="https://www.youtube.com/embed/Kw2atCgWivI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe> -->
     </div>
 	  <h2 class="works-title" id="subtitle">Digdog scraps Ebay and Discogs<br><a href="http://www.digdog.in" target="blank"><span class="hvr-pulse-shrink">Visit website</span></a></h2>
 <!--       <div class="row flexbox">
         <div class="card">
-          <img src="../images/display.png" alt="">
+          <img src="../images/display-2.png" alt="">
         </div>
         <div class="card">
-        <img src="../images/display.png" alt="">
+        <img src="../images/display-3.png" alt="">
         </div>
         <div class="card">
-        <img src="../images/display.png" alt="">
+        <img src="../images/display-4.png" alt="">
         </div>
       </div> -->
       <h2 class="works-title-2 hvr-pulse-shrink"><a href="http://www.sprintstud.io" target="blank">More projects here</a></h2>
