--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,20 +11,22 @@ title: Stanislas Wiart | Art Direction & Digital Design
   </div>
   <div class="container">
     <div class="row flexbox">
-    <iframe src="https://player.vimeo.com/video/242470540?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="700" height="494" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <iframe src="https://player.vimeo.com/video/242470540?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="700" height="494" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 	  <h2 class="works-title" id="subtitle">Digdog scraps Ebay and Discogs<br><a href="http://www.digdog.in" target="blank"><span class="hvr-pulse-shrink">Visit website</span></a></h2>
-<!--       <div class="row flexbox">
+      <div class="row flexbox items">
         <div class="card">
           <img src="../images/display-2.png" alt="">
         </div>
-        <div class="card">
-        <img src="../images/display-3.png" alt="">
+        <div class="card" id="tab">
+          <img src="../images/display-4.png" alt="">
         </div>
         <div class="card">
-        <img src="../images/display-4.png" alt="">
+          <img src="../images/display-3.png" alt="">
         </div>
-      </div> -->
-      <h2 class="works-title-2 hvr-pulse-shrink"><a href="http://www.sprintstud.io" target="blank">More projects here</a></h2>
+      </div>
+      <div class="row flexbox">
+        <h2 class="works-title-2 hvr-pulse-shrink"><a href="http://www.sprintstud.io" target="blank">More projects here</a></h2>
+      </div>  
   </div>
 
