--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -40,6 +40,7 @@ span .text-rotate > .wrap {
   padding: 0;
 }
 .card img {
+  align-item: center;
   filter: drop-shadow(0.15em 0.15em 0.25em rgba(0,0,0,0.25)); 
 }
 .works-title {
@@ -80,4 +81,12 @@ img:hover {
   span:hover {
     cursor: pointer;
   }
+}
+.items {
+  position: absolute;
+  text-align: center;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 150px;
 }
