--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <a href="https://github.com/Stan83W" target="blank" class="hvr-float-shadow">Github</a>
     <a href="#" class="hvr-float-shadow">Instagram</a>
     <a href="https://www.are.na/stan-wiart" target="blank" class="hvr-float-shadow">Arena</a>
-    <a href="https://www.linkedin.com/in/stanislas-wiart/" target="blank" class="hvr-float-shadow">Linkedin</a>
+<!--     <a href="https://www.linkedin.com/in/stanislas-wiart/" target="blank" class="hvr-float-shadow">Linkedin</a> -->
   </div>
   <div class="footer-copyright">
     2017 © All rights reserved | Made with ERB
