--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -12,14 +12,14 @@ html {
   a {
     color: black;
     opacity: 75%;
-    font-size: 0.7em;
+    font-size: 1vw;
     cursor: pointer;
   }
 }
 h1 {
   font-family: "NSB", "NB";
-  font-size: 6.5em;
-  line-height: 1em;
+  font-size: 10vw;
+  line-height: 10vw;
   margin-top: 6vw;
   width: 100%;
   text-align: center;
