--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -75,7 +75,7 @@ img:hover {
   justify-content: space-between;
   align-items: center;
   margin: 0 0 0 0;
-  max-height: 65vh;
+  // max-height: 65vh;
 }
 #subtitle {
   // line-height: 2em;
