--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 75px;
+  height: 5%;
   padding: 0px 30px 0px 30px;
   color: rgba(0,0,0,0.3);
   position: absolute;
