github embedded 3d try out

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,1 +1,3 @@
-      <iframe id="vs_iframe" src="http://www.viewstl.com/?embedded&rotation=no&clean=yes&noborder=yes&orientation=top&bgcolor=white&color=white&url=https://s3-eu-west-1.amazonaws.com/lincoln-3d-project/0007a.stl" style="border:0;margin:0;width:100%;"></iframe>
+<iframe id="vs_iframe" src="http://www.viewstl.com/?embedded&rotation=no&clean=yes&noborder=yes&orientation=top&bgcolor=white&color=white&url=https://s3-eu-west-1.amazonaws.com/lincoln-3d-project/0007a.stl" style="border:0;margin:0;width:100%;"></iframe>
+<!-- <script src="https://embed.github.com/view/3d/skalnik/secret-bear-clip/master/stl/clip.stl"></script>
+ -->
