--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,3 +1,3 @@
-<iframe id="vs_iframe" src="http://www.viewstl.com/?embedded&rotation=no&clean=yes&noborder=yes&orientation=bottom&bgcolor=white&color=white&url=https://www.thingiverse.com/download:1061678" style="border:0;margin:0;width:100%;"></iframe>
+<iframe id="vs_iframe" src="http://www.viewstl.com/?embedded&rotation=no&clean=yes&noborder=yes&orientation=bottom&bgcolor=white&color=gray&url=https://www.thingiverse.com/download:1217319" style="border:0;margin:0;width:100%;"></iframe>
 <!-- <script src="https://embed.github.com/view/3d/skalnik/secret-bear-clip/master/stl/clip.stl"></script>
  -->
