--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,3 +1,6 @@
-<iframe id="vs_iframe" src="http://www.viewstl.com/?embedded&rotation=no&clean=yes&noborder=yes&orientation=bottom&bgcolor=white&color=gray&url=https://github.com/Stan83W/final-landing/raw/master/source/images/roman-bust-1.stl" style="border:0;margin:0;width:100%;"></iframe>
+<div class="obj">
+	<iframe id="vs_iframe" src="http://www.viewstl.com/?embedded&rotation=no&clean=yes&noborder=yes&orientation=bottom&bgcolor=white&color=gray&url=https://github.com/Stan83W/final-landing/raw/master/source/images/augustus-exported-cut-2-repaired.stl" style="border:0;margin:0;width:100%;"></iframe>
+	
+</div>
 <!-- <script src="https://embed.github.com/view/3d/skalnik/secret-bear-clip/master/stl/clip.stl"></script>
  -->
