new images added

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,15 +7,35 @@ title: Stanislas Wiart | Art Direction & Digital Design
 	<h1>Art Direction & <br><span
 	   class="txt-rotate"
 	   data-period="2000"
-	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design", "*/+|}{~?><=&%$#@!" ]'></span>
+	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design" ]'></span>
   </div>
   <div class="container">
-    <div class="row flexbox">
+    <div class="row">
+      <div class="col-xl-12">
+        <img src="../images/display-landing-v2.jpg" alt="">
+      </div>
+    <div class="col-xl-12">
+        <img src="../images/display-landing-v2-2.jpg" alt="">
+    </div>
+    <div class="col-xl-12">
+        <img src="../images/display-landing-v2-3.jpg" alt=""> 
+    </div>
+    <div class="col-xl-12">
+        <img src="../images/display-landing-v2-4.jpg" alt="">
+    </div>
+    <div class="col-xl-12">
+        <img src="../images/display-landing-v2-5.jpg" alt="">
+    </div>
+  </div>
+
+
+
+<!--     <div class="row flexbox">
       <iframe src="https://player.vimeo.com/video/242470540?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="700" height="494" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 	  <h2 class="works-title" id="subtitle">Digdog scraps Ebay and Discogs</h2>
     <h3 class="works-title-2"><a href="http://www.digdog.in" target="blank"><span class="hvr-pulse-shrink">Visit website</span></a> | Credits: <a href="http://www.tristanbagot.com/" id="cred" target="blank">Tristan Bagot,</a> Sophia Wushanley, Clément Picard-Zivy</h3>
-    <h2 class="works-title-2 hvr-pulse-shrink" id="more"><a href="http://www.sprintstud.io" target="blank">More projects here</a></h2>
+    <h2 class="works-title-2 hvr-pulse-shrink" id="more"><a href="http://www.sprintstud.io" target="blank">More projects here</a></h2> -->
 <!--       <div class="row flexbox items">
         <div class="card">
           <img src="../images/display-2.png" alt="">
