changes on landing

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,31 +2,33 @@
 title: Stanislas Wiart | Art Direction & Digital Design
 ---
 
-<div id="home">
-  <div class="home-content">
-	<h1>Art Direction & <br><span
-	   class="txt-rotate"
-	   data-period="2000"
-	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design" ]'></span>
+
+<div class="container">
+  <div class="row">
+    <div class="">
+    	<h1>Art Direction & <br><span
+    	   class="txt-rotate"
+    	   data-period="2000"
+    	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design" ]'></span>
+      </h1>
+    </div>
+    <div class="">
+      <img src="../images/display-landing-v2.jpg" alt="">
+    </div>
+    <div class="">
+      <img src="../images/display-landing-v2-2.jpg" alt="">
+    </div>
+    <div class="">
+      <img src="../images/display-landing-v2-3.jpg" alt="">
+    </div>
+    <div class="">
+      <img src="../images/display-landing-v2-4.jpg" alt="">
+    </div>
+    <div class="">
+      <img src="../images/display-landing-v2-5.jpg" alt="">
+    </div>
   </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-xl-12">
-        <img src="../images/display-landing-v2.jpg" alt="">
-      </div>
-    <div class="col-xl-12">
-        <img src="../images/display-landing-v2-2.jpg" alt="">
-    </div>
-    <div class="col-xl-12">
-        <img src="../images/display-landing-v2-3.jpg" alt=""> 
-    </div>
-    <div class="col-xl-12">
-        <img src="../images/display-landing-v2-4.jpg" alt="">
-    </div>
-    <div class="col-xl-12">
-        <img src="../images/display-landing-v2-5.jpg" alt="">
-    </div>
-  </div>
+</div>
 
 
 
@@ -47,5 +49,4 @@ title: Stanislas Wiart | Art Direction & Digital Design
           <img src="../images/display-3.png" alt="">
         </div>
       </div> -->
-  </div>
 
