--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,14 +1,11 @@
-html {
-  height: 100%;
-  box-sizing: border-box;
-}
+// html {
+//   height: 100%;
+//   box-sizing: border-box;
+// }
 
 #home {
   color: black;
-  margin: auto;
-  p {
-    margin-top: 1.5em;
-  }
+  // margin: auto;
   a {
     color: black;
     opacity: 75%;
@@ -35,14 +32,13 @@ span .text-rotate > .wrap {
 
 .container {
   height: 120vh;
-  width: 100%;
-  margin: 0 0 0 0;
+  // margin: 10px;
   padding: 0;
 }
-.card img {
-  align-item: center;
-  filter: drop-shadow(0.15em 0.15em 0.25em rgba(0,0,0,0.25)); 
-}
+// .card img {
+//   align-item: center;
+//   filter: drop-shadow(0.15em 0.15em 0.25em rgba(0,0,0,0.25)); 
+// }
 .works-title {
   // position: absolute;
   text-align: center;
@@ -63,18 +59,18 @@ span .text-rotate > .wrap {
   }
 }
 img {
-  height: 20vh;
+  width: 100%;
 }
-img:hover {
-  transition: all 0.3s ease;
-  transform: scale(1.1);
-  cursor: pointer;
-}
+// img:hover {
+//   transition: all 0.3s ease;
+//   transform: scale(1.1);
+//   cursor: pointer;
+// }
 .flexbox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 0 0 0;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
+  // margin: 0 0 0 0;
   // max-height: 65vh;
 }
 #subtitle {
