get rid of that bootstrap shit

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,8 +3,8 @@ title: Stanislas Wiart | Art Direction & Digital Design
 ---
 
 
-<div class="container">
-  <div class="row">
+<div class="">
+  <div class="">
     <div class="">
     	<h1>Art Direction & <br><span
     	   class="txt-rotate"
