--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-ok {
   transition: all 0.3s ease;
   height: 70px;
-  padding: 0px 30px;
+  padding: 0px 2%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -14,6 +14,8 @@
   }
 }
 h2 {
-  font-size: 1.5vw;
+  font-size: 0.8em;
+  letter-spacing: 0.1em;
   color: black !important;
+  text-transform: uppercase;
 }
