--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,18 +14,38 @@ title: Stanislas Wiart | Art Direction & Digital Design
     </div>
     <div class="">
       <img src="../images/display-landing-v2.jpg" alt="">
+      <div class="desc">
+        <h2>Digdog</h2>
+        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+      </div>
     </div>
     <div class="">
       <img src="../images/display-landing-v2-2.jpg" alt="">
+      <div class="desc">
+        <h2>Digdog</h2>
+        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+      </div>
     </div>
     <div class="">
       <img src="../images/display-landing-v2-3.jpg" alt="">
+      <div class="desc">
+        <h2>Digdog</h2>
+        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+      </div>
     </div>
     <div class="">
       <img src="../images/display-landing-v2-4.jpg" alt="">
+      <div class="desc">
+        <h2>Digdog</h2>
+        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+      </div>
     </div>
     <div class="">
       <img src="../images/display-landing-v2-5.jpg" alt="">
+      <div class="desc">
+        <h2>Digdog</h2>
+        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+      </div>
     </div>
   </div>
 </div>
