--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -53,12 +53,12 @@ img {
 }
 .desc {
   text-align: center;
-  width: 70vw;
+  width: 60vw;
   margin: auto;
-  margin-bottom: 10%;
+  margin-bottom: 8%;
   h3 {
     font-size: 2em !important;
-    font-family: "NSB";
+    font-family: "NSB", "NB";
     color: black;
   }
 }
