--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,34 +16,34 @@ title: Stanislas Wiart | Art Direction & Digital Design
       <img src="../images/display-landing-v2.jpg" alt="">
       <div class="desc">
         <h2>Digdog</h2>
-        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+        <h3>Front-end Development | UI Design | Branding<br>Credits: Tristan Bagot, Sophia Wushanley, Clément Picard-Zivy</h3>
       </div>
     </div>
     <div class="">
       <img src="../images/display-landing-v2-2.jpg" alt="">
       <div class="desc">
-        <h2>Digdog</h2>
-        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+        <h2>Bike it Easy</h2>
+        <h3>UI/UX Design | Branding<br>Find a bike in Paris in less than 5mn. A project for a bike rental application.</h3>
       </div>
     </div>
     <div class="">
       <img src="../images/display-landing-v2-3.jpg" alt="">
       <div class="desc">
-        <h2>Digdog</h2>
-        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+        <h2>Domestic Landscape</h2>
+        <h3>Digital Design | UI Design | Branding</h3>
       </div>
     </div>
     <div class="">
       <img src="../images/display-landing-v2-4.jpg" alt="">
       <div class="desc">
-        <h2>Digdog</h2>
-        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+        <h2>Brain2brain</h2>
+        <h3>Front-end Development | UI Design | Branding</h3>
       </div>
     </div>
     <div class="">
       <img src="../images/display-landing-v2-5.jpg" alt="">
       <div class="desc">
-        <h2>Digdog</h2>
+        <h2>Spirienza</h2>
         <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
       </div>
     </div>
