another descs fixes

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -44,7 +44,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
       <img src="../images/display-landing-v2-5.jpg" alt="">
       <div class="desc">
         <h2>Spirienza</h2>
-        <h3>An application that scraps Discogs and Ebay realised with Tristan Bagot, Sophia Wushanley and Clément Picard-Zivy</h3>
+        <h3>Digital Design | UI Design | Branding</h3>
       </div>
     </div>
   </div>
