aos still nott working

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,7 +19,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
         <h3>Front-end Development | UI Design | Branding<br>Credits: Tristan Bagot, Sophia Wushanley, Clément Picard-Zivy</h3>
       </div>
     </div>
-    <div class="" data-aos="fade-down">
+    <div class="">
       <img src="../images/display-landing-v2-2.jpg" alt="">
       <div class="desc">
         <h2>Bike it Easy</h2>
@@ -51,9 +51,6 @@ title: Stanislas Wiart | Art Direction & Digital Design
 </div>
   <script>
     AOS.init();
-  </script>
-  <script>
-    new WOW().init();
   </script>
 
 
