--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -8,7 +8,7 @@
 body {
 	position: relative;
 	min-height: 100%;
-	overflow-x: hidden; 
-	overflow-y: scroll;
+	// overflow-x: hidden; 
+	// overflow-y: scroll;
 	background-color: white !important;
 }
