dumb aos finally working

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,35 +12,35 @@ title: Stanislas Wiart | Art Direction & Digital Design
     	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design" ]'></span>
       </h1>
     </div>
-    <div class="">
+    <div class="" data-aos="fade-up">
       <img src="../images/display-landing-v2.jpg" alt="">
       <div class="desc">
         <h2>Digdog</h2>
         <h3>Front-end Development | UI Design | Branding<br>Credits: Tristan Bagot, Sophia Wushanley, Clément Picard-Zivy</h3>
       </div>
     </div>
-    <div class="">
+    <div class="" data-aos="fade-up">
       <img src="../images/display-landing-v2-2.jpg" alt="">
       <div class="desc">
         <h2>Bike it Easy</h2>
         <h3>UI/UX Design | Branding<br>Find a bike in Paris in less than 5mn. A project for a bike rental application.</h3>
       </div>
     </div>
-    <div class="">
+    <div class="" data-aos="fade-up">
       <img src="../images/display-landing-v2-3.jpg" alt="">
       <div class="desc">
         <h2>Domestic Landscape</h2>
         <h3>Digital Design | UI Design | Branding</h3>
       </div>
     </div>
-    <div class="">
+    <div class="" data-aos="fade-up">
       <img src="../images/display-landing-v2-4.jpg" alt="">
       <div class="desc">
         <h2>Brain2brain</h2>
         <h3>Front-end Development | UI Design | Branding</h3>
       </div>
     </div>
-    <div class="">
+    <div class="" data-aos="fade-up">
       <img src="../images/display-landing-v2-5.jpg" alt="">
       <div class="desc">
         <h2>Spirienza</h2>
@@ -51,6 +51,9 @@ title: Stanislas Wiart | Art Direction & Digital Design
 </div>
   <script>
     AOS.init();
+    $(window).on('load', function() {
+        AOS.refresh();
+    });
   </script>
 
 
