--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,38 +9,45 @@ title: Stanislas Wiart | Art Direction & Digital Design
     	<h1>Art Direction & <br><span
     	   class="txt-rotate"
     	   data-period="2000"
-    	   data-rotate='[ "Branding", "Digital Design", "Web Development", "UI/UX Design" ]'></span>
+    	   data-rotate='[ "Digital Design", "Branding", "Web Development", "UI/UX Design" ]'></span>
       </h1>
     </div>
-    <div class="" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <img src="../images/display-landing-v2.jpg" alt="">
+    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+      <img src="../images/display-landing-v2-7.jpg" alt="">
       <div class="desc">
         <h2>Digdog</h2>
         <h3>Front-end Development | UI Design | Branding<br>Credits: Tristan Bagot, Sophia Wushanley, Clément Picard-Zivy</h3>
       </div>
     </div>
-    <div class="" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <img src="../images/display-landing-v2-2.jpg" alt="">
+    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+      <img src="../images/display-landing-v2-9.jpg" alt="">
       <div class="desc">
         <h2>Bike it Easy</h2>
         <h3>UI/UX Design | Branding<br>Find a bike in Paris in less than 5mn.<br>A project for a bike rental application.</h3>
       </div>
     </div>
-    <div class="" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="600">
+    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-3.jpg" alt="">
       <div class="desc">
         <h2>Domestic Landscape</h2>
         <h3>Digital Design | UI Design | Branding</h3>
       </div>
     </div>
-    <div class="" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="600">
+    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+      <img src="../images/display-landing-v2-6.jpg" alt="">
+      <div class="desc">
+        <h2>Newmanity</h2>
+        <h3>Art Direction | Branding</h3>
+      </div>
+    </div>
+    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-4.jpg" alt="">
       <div class="desc">
         <h2>Brain2brain</h2>
         <h3>Front-end Development | UI Design | Branding<br>Book a freelance developer according to his skills and location.</h3>
       </div>
     </div>
-    <div class="" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="600">
+    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-5.jpg" alt="">
       <div class="desc">
         <h2>Spirienza</h2>
