--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,43 +15,49 @@ title: Stanislas Wiart | Art Direction & Digital Design
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-7.jpg" alt="">
       <div class="desc">
-        <h2>Digdog</h2>
-        <h3>Front-end Development | UI Design | Branding<br>Credits: Tristan Bagot, Sophia Wushanley, Clément Picard-Zivy</h3>
+        <h2>Digdog | 2017</h2>
+        <h3>Front-end Development | UI Design | Branding</h3>
+        <h2>Credits: Tristan Bagot, Sophia Wushanley, Clément Picard-Zivy</h2>
       </div>
     </div>
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-9.jpg" alt="">
       <div class="desc">
-        <h2>Bike it Easy</h2>
-        <h3>UI/UX Design | Branding<br>Find a bike in Paris in less than 5mn.<br>A project for a bike rental application.</h3>
+        <h2>Bike it Easy | 2017</h2>
+        <h3>UI/UX Design | Branding</h3>
+        <h2>Find a bike in Paris in less than 5mn</h2>
       </div>
     </div>
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-3.jpg" alt="">
       <div class="desc">
-        <h2>Domestic Landscape</h2>
+        <h2>Domestic Landscape | 2017</h2>
         <h3>Digital Design | UI Design | Branding</h3>
+        <h2>Post-war italian design online gallery</h2>
       </div>
     </div>
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-6.jpg" alt="">
       <div class="desc">
-        <h2>Newmanity</h2>
+        <h2>Newmanity | 2016</h2>
         <h3>Art Direction | Branding</h3>
+        <h2>Project for a Newmanity App launch poster</h2>
       </div>
     </div>
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-4.jpg" alt="">
       <div class="desc">
-        <h2>Brain2brain</h2>
-        <h3>Front-end Development | UI Design | Branding<br>Book a freelance developer according to his skills and location.</h3>
+        <h2>Brain2brain | 2017</h2>
+        <h3>Front-end Development | UI Design | Branding</h3>
+        <h2>Book a freelance developer according to his skills and location</h2>
       </div>
     </div>
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-5.jpg" alt="">
       <div class="desc">
-        <h2>Spirienza</h2>
+        <h2>Spirienza | 2017</h2>
         <h3>Digital Design | UI Design | Branding</h3>
+        <h2>Handmade leather bags & accesories</h2>
       </div>
     </div>
   </div>
