--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,6 +17,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
       <div class="desc">
         <h2>Digdog | 2017</h2>
         <h3>Front-end Development | UI Design | Branding</h3>
+        <h2>Track down rare records 24/7</h2>
         <h2>Credits: Tristan Bagot, Sophia Wushanley, Clément Picard-Zivy</h2>
       </div>
     </div>
