--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -37,14 +37,14 @@ title: Stanislas Wiart | Art Direction & Digital Design
         <h2>Post-war italian design online gallery</h2>
       </div>
     </div>
-    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+<!--     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-6.jpg" alt="">
       <div class="desc">
         <h2>Newmanity | 2016</h2>
         <h3>Art Direction | Branding</h3>
         <h2>Project for a Newmanity App launch poster</h2>
       </div>
-    </div>
+    </div> -->
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-4.jpg" alt="">
       <div class="desc">
