bootstrap fail, flickity ongoing

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,9 @@
     <%= favicon_tag 'images/favicon.png' %>
     <meta name="description" content="Art Direction | Branding | Web Development | Digital Design">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.css">
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.js"></script>
   </head>
   <body>
     <%= partial "layouts/navbar" %>
