--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,6 +12,50 @@ title: Stanislas Wiart | Art Direction & Digital Design
     	   data-rotate='[ "Digital Design", "Branding", "Web Development", "UI/UX Design" ]'></span>
       </h1>
     </div>
+<!--     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="../images/display-landing-v2-7.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../images/display-landing-v2-10.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../images/display-landing-v2-15.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div> -->
+  <div class="main-carousel">
+    <div class="carousel-cell">
+      <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+        <img src="../images/display-landing-v2-7.jpg" alt="">
+      </div>        
+    </div>
+    <div class="carousel-cell">
+      <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+        <img src="../images/display-landing-v2-10.jpg" alt="">
+      </div>        
+    </div>
+    <div class="carousel-cell">
+      <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+        <img src="../images/display-landing-v2-15.jpg" alt="">
+      </div>        
+    </div>
+  </div>
+
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-7.jpg" alt="">
       <div class="desc">
@@ -69,7 +113,13 @@ title: Stanislas Wiart | Art Direction & Digital Design
         AOS.refresh();
     });
   </script>
-
+  <script>
+    $('.main-carousel').flickity({
+      // options
+      cellAlign: 'left',
+      contain: true
+    });
+  </script>
 
 <!--     <div class="row flexbox">
       <iframe src="https://player.vimeo.com/video/242470540?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="700" height="494" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
